crates/franken-node/tests/snapshots/verify_release_cli_e2e__verify_release_success_json.snap
---
source: crates/franken-node/tests/verify_release_cli_e2e.rs
expression: "canonicalize_verify_release_snapshot(payload, &release_dir, &key_dir)"
---
{
  "release_path": "[release]",
  "manifest_signature_ok": true,
  "results": [
    {
      "artifact_name": "franken-node-darwin-arm64.tar.xz",
      "passed": true,
      "key_id": "4b077d42181dd752",
      "failure_reason": null
    },
    {
      "artifact_name": "franken-node-linux-x64.tar.xz",
      "passed": true,
      "key_id": "4b077d42181dd752",
      "failure_reason": null
    }
  ],
  "overall_pass": true,
  "unlisted_artifact_count": 0
}
